pivot table changes

--- a/PivotTable/PivotTable.UI/Views/Home/PivotWithJson.cshtml
+++ b/PivotTable/PivotTable.UI/Views/Home/PivotWithJson.cshtml
@@ -23,10 +23,12 @@
 @section script{
 
     <script type="text/javascript">
+        console.log('executed pivotWithJson.cshtml');
+
         var data = [
-            { color: "blue", shape: "circle" },
-            { color: "red", shape: "triangle" },
-            { color: "green", shape: "square" }
+                { color: "blue", shape: "circle" },
+                { color: "red", shape: "triangle" },
+                { color: "green", shape: "square" }
         ];
 
         var rowsArray = new Array();
