--- a/PivotTable/PivotTable.UI/Views/Shared/_Layout.cshtml
+++ b/PivotTable/PivotTable.UI/Views/Shared/_Layout.cshtml
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    <link href="~/Content/c3.min.css" rel="stylesheet" />
+    <link href="~/dist/c3.min.css" rel="stylesheet" />
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/vendor/pivot.css" rel="stylesheet" />
+    <link href="~/dist/vendor/pivot.css" rel="stylesheet" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <style>
         .hljs, .hljs-subst {
@@ -48,15 +48,15 @@
         </footer>
     </div>
     <script src="~/Scripts/jquery-1.12.4.min.js"></script>
-    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    @*<script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/d3.min.js"></script>
     <script src="~/Scripts/c3.min.js"></script>
-    <script src="~/vendor/pivot.js"></script>
-    <script type="text/javascript" src="~/vendor/export_renderers.js"></script>
-    <script type="text/javascript" src="~/vendor/d3_renderers.js"></script>
-    <script type="text/javascript" src="~/vendor/c3_renderers.js"></script>
-    <script src="~/js/pivot.js"></script>
+    <script src="~/dist/vendor/pivot.js"></script>
+    <script type="text/javascript" src="~/dist/vendor/export_renderers.js"></script>
+    <script type="text/javascript" src="~/dist/vendor/d3_renderers.js"></script>
+    <script type="text/javascript" src="~/dist/vendor/c3_renderers.js"></script>*@
+    <script src="~/dist/pivot.js"></script>
     @RenderSection("script", false)
 </body>
 </html>
